Added new Endpoint to fetch the offset of the page and implemented the offset in the Front-End
